--- a/styles/style.css
+++ b/styles/style.css
@@ -61,6 +61,7 @@
     justify-content: center;
     text-align: center;
     margin-top: 30px;
+    margin-bottom: 100px;
 }
 
 .card {
@@ -118,4 +119,63 @@
 
 .card-heading h1{
     font-size: 32px;
+}
+
+#about{
+    width: 100%;
+    display: flex;
+    align-items:start;
+    justify-content: center;
+}
+
+.about-left{
+    width: 50%;
+}
+
+.about-right{
+    width: 50%;
+    text-align: center;
+    padding: 5% 0;
+    
+
+}
+
+.about-left img{
+    width: 100%;
+}
+
+.about-right .follow{
+    border-top: 1px solid lightgray;
+    border-bottom: 1px solid lightgrey;
+    width: 100%;
+    padding: 15px 0;
+    margin-bottom: 10px;
+    font-weight: 600;
+    opacity: .7;
+}
+
+.about-title h1{
+    width: 100%;
+    padding: 0 15%;
+    text-align: center;
+    margin-bottom: 25px;
+    font-size: 30px;
+}
+
+.about-paragraph p{
+    width: 100%;
+    padding: 0 20%;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.about-icons i{
+    font-size: 22px;
+    padding: 5px;
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    background-color: white;
+    color: black;
+    cursor: pointer;
+
 }
